base: tuner: add a hide config to left and right shortcut change the current none to be a hide shortcut and add a new default to use instead
Change-Id: I6fdfa68a4b083df0ae6583000862dc7bb07a75c7

Conflicts:
	packages/SystemUI/res/values/custom_strings.xml

--- a/packages/SystemUI/res/values/custom_strings.xml
+++ b/packages/SystemUI/res/values/custom_strings.xml
@@ -217,4 +217,8 @@
     <string name="pie_state_summary">Use pie controls while in immersive mode</string>
     <string name="pie_battery_level">"BATTERY LEVEL "</string>
     <string name="quick_settings_pie">Pie</string>
+
+    <!-- Lockscreen tuner -->
+    <string name="lockscreen_default">Default</string>
+    <string name="lockscreen_hidden">None</string>
 </resources>
