--- a/core/res/res/drawable/ic_lock_airplane_mode.xml
+++ b/core/res/res/drawable/ic_lock_airplane_mode.xml
@@ -16,4 +16,4 @@
 
 <bitmap xmlns:android="http://schemas.android.com/apk/res/android"
     android:src="@drawable/ic_lock_airplane_mode_alpha"
-    android:tint="@*android:color/accent_device_default_light" />
+    android:tint="@color/power_menu_icons" />
