--- a/core/res/res/values/custom_colors.xml
+++ b/core/res/res/values/custom_colors.xml
@@ -47,4 +47,7 @@
     <color name="notification_snooze_text">#dd000000</color>
 
     <color name="updater_snackbar_text_color">@android:color/white</color>
+
+    <!-- Power menu items -->
+    <color name="power_menu_icons">#167C80</color>
 </resources>
