--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -208,4 +208,7 @@
   <!-- Bottom gestures -->
   <java-symbol type="dimen" name="nav_gesture_swipe_min_length" />
   <java-symbol type="dimen" name="nav_gesture_long_press_max_length" />
+
+  <!-- Power menu icon tint color -->
+  <java-symbol type="color" name="power_menu_icons" />
 </resources>
