--- a/packages/SystemUI/res/drawable/ic_lock_screenshot.xml
+++ b/packages/SystemUI/res/drawable/ic_lock_screenshot.xml
@@ -19,7 +19,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="?android:attr/colorControlNormal">
+    android:tint="@*android:color/power_menu_icons">
 
     <path
         android:fillColor="#FF000000"
