--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -209,6 +209,9 @@
   <java-symbol type="dimen" name="nav_gesture_swipe_min_length" />
   <java-symbol type="dimen" name="nav_gesture_long_press_max_length" />
 
+  <!-- Settings icon tint color -->
+  <java-symbol type="color" name="settings_icon_tint_color" />
+
   <!-- Power menu icon tint color -->
   <java-symbol type="color" name="power_menu_icons" />
 </resources>
