--- a/packages/SystemUI/res/values-in-rID/custom_strings.xml
+++ b/packages/SystemUI/res/values-in-rID/custom_strings.xml
@@ -156,7 +156,7 @@
     <string name="yes">Ya</string>
     <string name="no">Tidak</string>
     <!-- Slim Shortcut Actions -->
-    <string name="shortcut_picker">Pintasan crDroid</string>
+    <string name="shortcut_picker">Pintasan Custom</string>
     <string name="shortcut_rotation">Toggle mengunci rotasi</string>
     <string name="shortcut_torch">Senter</string>
     <string name="shortcut_chamber">Ruang rahasia</string>
