--- a/packages/SystemUI/res/values-pl-rPL/custom_strings.xml
+++ b/packages/SystemUI/res/values-pl-rPL/custom_strings.xml
@@ -156,7 +156,7 @@
     <string name="yes">Tak</string>
     <string name="no">Nie</string>
     <!-- Slim Shortcut Actions -->
-    <string name="shortcut_picker">Skróty crDroid</string>
+    <string name="shortcut_picker">Skróty Custom</string>
     <string name="shortcut_rotation">Blokada obrotu ekranu przełączona</string>
     <string name="shortcut_torch">Latarka</string>
     <string name="shortcut_chamber">Komnata Tajemnic</string>
