--- a/packages/SystemUI/res/values-ur-rPK/custom_strings.xml
+++ b/packages/SystemUI/res/values-ur-rPK/custom_strings.xml
@@ -156,7 +156,7 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <!-- Slim Shortcut Actions -->
-    <string name="shortcut_picker">crDroid Shortcuts</string>
+    <string name="shortcut_picker">Custom Shortcuts</string>
     <string name="shortcut_rotation">Rotation lock toggle</string>
     <string name="shortcut_torch">Flashlight</string>
     <string name="shortcut_chamber">Chamber of Secrets</string>
